--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-*.class
-*.log
+.class
+.log
 .jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+.war
+.nar
+.ear
+.zip
+.tar.gz
+.rar
 hs_err_pid*
 out/
 target/
@@ -25,9 +25,9 @@ target/
 
 ### IntelliJ IDEA ###
 .idea
-*.iws
-*.iml
-*.ipr
+.iws
+.iml
+.ipr
 .DS_Store
 
 ### NetBeans ###
@@ -43,5 +43,5 @@ build/
 ### VS Code ###
 .vscode/
 
-*.db
+.db
 db/*
